[REFACTOR] Ticket Types